# dojo_proc_macro

./: .tool-versions  Cargo.toml  Scarb.toml
.snfoundry_cache/: .prev_tests_failed
core-test/: Scarb.toml
core-test/src/: lib.cairo  snf_utils.cairo  world.cairo
core-test/src/tests/: contract.cairo
core-test/src/tests/helpers/: event.cairo  helpers.cairo  model.cairo
core-test/src/tests/meta/: introspect.cairo
core-test/src/tests/model/: model.cairo
core-test/src/tests/storage/: database.cairo  packing.cairo  storage.cairo
core-test/src/tests/world/: acl.cairo  contract.cairo  event.cairo  metadata.cairo  model.cairo  namespace.cairo  world.cairo
dojo/: Scarb.toml
dojo/src/: lib.cairo
dojo/src/contract/components/: upgradeable.cairo  world_provider.cairo
dojo/src/model/: metadata.cairo
dojo/src/world/: storage.cairo  world_contract.cairo
example/: Scarb.toml
example/src/: event.cairo  introspect.cairo  lib.cairo  model.cairo
example/src/dojo/meta/: introspect.cairo  layout.cairo
examples/game-lib/: Scarb.toml
examples/game-lib/armory/: Scarb.toml
examples/game-lib/bestiary/: Scarb.toml
examples/simple/: Scarb.toml
examples/simple-lib/: Scarb.toml
examples/simple/src/: contract.cairo  event.cairo  lib.cairo  model.cairo
examples/spawn-and-move/: Scarb.toml
examples/workspaced/: Scarb.toml
examples/workspaced/other/: Scarb.toml
examples/workspaced/other_lib/: Scarb.toml
macro/: Cargo.toml
macro/src/: constants.rs  diagnostic_ext.rs  lib.rs  proc_macro_result_ext.rs
macro/src/attributes/: contract.rs  event.rs  helpers.rs  library.rs  macros.rs  mod.rs  model.rs
macro/src/attributes/patches/: model.patch.cairo
macro/src/derives/: helpers.rs  macros.rs  mod.rs
macro/src/derives/introspect/: enums.rs  layout.rs  mod.rs  structs.rs
macro/src/helpers/: checker.rs  debug.rs  diagnostic_ext.rs  formatter.rs  mod.rs  parser.rs  serializer.rs  tokenizer.rs
macro/src/inlines/: bytearray_hash.rs  macros.rs  mod.rs
macro/src/utils/: diagnostic_ext.rs  mod.rs  proc_macro_result_ext.rs
scripts/: cairo_fmt.sh  rust_fmt.sh
types/: Cargo.toml
types/src/: naming.rs  packing.rs  primitive.rs  primitive_conversion.rs  schema.rs
