[workspace]
resolver = "2"

members = [
    "macro",
    "types"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/dojo/"
version = "1.2.2"

[workspace.dependencies]
dojo-types = { path = "types" }

cairo-lang-primitive-token = "1"
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb.git", rev = "3433263ad8462aec7304d18b1375235ed99da7b9" }

cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
smol_str = "0.3"

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.12", features = [ "abigen-rs" ] }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.12" }
starknet-crypto = "0.7.1"

anyhow = "1.0.89"
crypto-bigint = { version = "0.5.3", features = [ "serde" ] }
hex = "0.4.3"
itertools = "0.12.1"
num-traits = { version = "0.2", default-features = false }
regex = "1.10.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
starknet = "0.12.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0.32"
indexmap = "2.2.5"
